[package]
name = "cirno"
version = "1.2.0"
description = 'a "smartest" task scheduler'
edition = "2021"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
env_logger = "0.11.3"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
log = "0.4.21"
rustix = { version = "0.38.34", features = ["process", "param"] }
signal-hook = "0.3.17"
sysinfo = "0.31.2"
uuid = { version = "1.7.0", features = ["v1", "std", "fast-rng"] }

[profile.release]
# use lto to optimize the binary
lto = true
